[package]
name = "auth"
version = "0.1.0"
edition = "2021"

[dependencies]
jsonwebtoken = "9.3.0"
serde = {version = "1.0.0", features = ["derive"]}
uuid = {version = "1.8.0", features = ["v4", "serde"]}
chrono  = "0.4.37"
reqwest = { version = "0.12.7", features = ["json"] }
tokio = {version = "1.39.3", features = ["full"]}
dotenvy = "0.15.7"
envy = "0.4.2"
url = "2.5.2"
thiserror = "1.0.63"